--- a/tutorials/transformers_tasks.ipynb
+++ b/tutorials/transformers_tasks.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [
         "kIMXjbh-AVLD"
       ],
-      "authorship_tag": "ABX9TyMPZg5iKxHLaZkM75389iUR",
+      "authorship_tag": "ABX9TyMy7wjx5zfWXdqFJW13Fsra",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -18851,7 +18851,6 @@
       "source": [
         "# Transformers Tasks\n",
         "\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/main/notebooks/colab-github-demo.ipynb)\n",
         "\n",
         "\n",
         "A primer on machine learning for legacy Java developers. What tasks could be accomplished? Let's start with Hugging Face transformers library.\n",
@@ -21674,7 +21673,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### image segmentation"
+        "### image segmentation\n",
+        "\n",
+        "* transformers\n",
+        "\n",
+        "<img src=\"https://miro.medium.com/v2/resize:fit:824/1*RHZg5-dP9ZgvzZa73HVt2g.png\" height=\"500\">"
       ],
       "metadata": {
         "id": "23BNvbJf41Te"
@@ -21758,7 +21761,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Audio"
+        "## Audio\n",
+        "\n",
+        "* keras\n",
+        "* huggingface\n",
+        "* tensorflow\n",
+        "* pytorch\n",
+        "\n",
+        "<img src=\"https://miro.medium.com/v2/resize:fit:1200/1*Bp8K-_PJrG2NQxLlzk7hlw.png\" height=\"250\">"
       ],
       "metadata": {
         "id": "O4tStJ-CZYBc"
