--- a/tutorials/transformers_tasks.ipynb
+++ b/tutorials/transformers_tasks.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [
         "kIMXjbh-AVLD"
       ],
-      "authorship_tag": "ABX9TyMeSbjpEEr1WBicYhY0GlvJ",
+      "authorship_tag": "ABX9TyNeieio9Jwefign8OTc3WWY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -17107,7 +17107,12 @@
         "\n",
         "Note:\n",
         "* pipeline abstraction;\n",
-        "* model;"
+        "* model;\n",
+        "* libraries;\n",
+        "\n",
+        "![old](https://github.com/nicolinux72/codellama-locally-with-gradio-and-huggingface/blob/main/tutorials/lib-old.png?raw=true)\n",
+        "\n",
+        "![new](https://github.com/nicolinux72/codellama-locally-with-gradio-and-huggingface/blob/main/tutorials/lib-new.png?raw=true)"
       ],
       "metadata": {
         "id": "gh4UrCRuz5Qv"
@@ -18388,7 +18393,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Audio"
+        "## Audio\n"
       ],
       "metadata": {
         "id": "O4tStJ-CZYBc"
