--- a/tutorials/classification-metrics.ipynb
+++ b/tutorials/classification-metrics.ipynb
@@ -139,9 +139,9 @@
     "The clissifier should return a conditional distribution $P(C_k|\\boldsymbol{x})$.\n",
     "\n",
     "Notes:\n",
-    "* Returning full pdf $P(C_k,\\boldsymbol{x})$;\n",
-    "* Returning conditional distribution $P(C_k|\\boldsymbol{x})$;\n",
-    "* Returning class $C_k$;"
+    "* Generative Model: Returning full pdf $P(C_k,\\boldsymbol{x})$;\n",
+    "* Discriminative Model: Returning conditional distribution $P(C_k|\\boldsymbol{x})$;\n",
+    "* Discriminant Function: Returning class $C_k$;"
    ]
   },
   {
